# rusputyn

./: .gitignore  BENCHMARKS.csv  BENCHMARK_SUMMARY.md  CONTRIBUTING.md  DELIVERABLES.md  DOCKER.md  Dockerfile  LICENSE  PACKAGE_SELECTION_CRITERIA.md  PERFORMANCE.md  PRIORITY_PACKAGES.md  QUICK_START.md  README.md  ROADMAP.md  UNSUITABLE_PACKAGES.md  USAGE_EXAMPLES.md  docker-compose.yml  function_factory.jsx  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  release.yml  wheels.yml
libraries/attrs-rs/: FEASIBILITY_ANALYSIS.md
libraries/charset-normalizer-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/charset-normalizer-rs/src/: lib.rs
libraries/colorama-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/colorama-rs/src/: lib.rs
libraries/dateutil-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/dateutil-rs/src/: lib.rs
libraries/humanize-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/humanize-rs/src/: lib.rs
libraries/jsonschema-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/jsonschema-rs/src/: lib.rs
libraries/jsonschema-rs/tests/: test_jsonschema.py
libraries/markupsafe-rs/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  benchmark.py  pyproject.toml
libraries/markupsafe-rs/src/: lib.rs
libraries/markupsafe-rs/tests/: test_markupsafe.py
libraries/more-itertools-rs/: Cargo.toml  LESSONS_LEARNED.md  README.md  benchmark.py  pyproject.toml
libraries/more-itertools-rs/src/: lib.rs
libraries/more-itertools-rs/tests/: test_more_itertools.py
libraries/packaging-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/packaging-rs/src/: lib.rs
libraries/python-dotenv-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/python-dotenv-rs/src/: lib.rs
libraries/python-dotenv-rs/tests/: test_dotenv.py
libraries/pyyaml-rs/: Cargo.toml  pyproject.toml
libraries/rust-speedup-showcase/: README.md  SUMMARY.md  TARGET_ANALYSIS.md  benchmark_all.py  requirements-python.txt  requirements-rust.txt
libraries/tabulate-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/tabulate-rs/src/: lib.rs
libraries/tomli-rs/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  benchmark.py  pyproject.toml
libraries/tomli-rs/src/: lib.rs
libraries/tomli-rs/tests/: test_tomli.py
libraries/validators-rs/: Cargo.toml  README.md  benchmark.py  pyproject.toml
libraries/validators-rs/src/: lib.rs
scripts/: test_all.sh
