[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "charset_normalizer_rs"
version = "0.1.0"
description = "High-performance Rust implementation of charset-normalizer - universal character encoding detection"
requires-python = ">=3.8"
authors = [{name = "Rusputyn Contributors"}]
keywords = ["charset", "encoding", "detection", "unicode", "performance", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[tool.maturin]
features = ["pyo3/extension-module"]
