[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dateutil_rs"
version = "0.1.0"
description = "High-performance Rust implementation of python-dateutil - flexible datetime parsing with multiple format support"
requires-python = ">=3.8"
authors = [{name = "Rusputyn Contributors"}]
readme = "README.md"
keywords = ["datetime", "dateutil", "parsing", "performance", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
features = ["pyo3/extension-module"]
