[package]
name = "humanize_rs"
version = "0.1.0"
edition = "2021"
description = "Fast Rust implementation of Python's humanize library"
license = "MIT"

[lib]
name = "humanize_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
num-format = "0.4"
