[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jsonschema-rs"
version = "0.1.0"
description = "High-performance Rust implementation of JSON Schema validation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["json", "jsonschema", "validation", "rust", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
module-name = "jsonschema_rs"
