[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "markupsafe-rs"
version = "0.1.0"
description = "High-performance Rust implementation of MarkupSafe"
authors = [{name = "Tal"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: HTML",
]
keywords = ["html", "escape", "markup", "jinja2", "performance"]

[project.urls]
Homepage = "https://github.com/youruser/markupsafe-rs"
Repository = "https://github.com/youruser/markupsafe-rs"

[tool.maturin]
python-source = "python"
module-name = "markupsafe_rs"
