[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "python-dotenv-rs"
version = "0.1.0"
description = "High-performance Rust implementation of python-dotenv"
authors = [{name = "Rusputyn Contributors"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dotenv", "environment", "variables", "config", "configuration"]

[project.urls]
Homepage = "https://github.com/Talisberg/rusputyn"
Repository = "https://github.com/Talisberg/rusputyn"

[tool.maturin]
module-name = "dotenv_rs"
