[package]
name = "tabulate_rs"
version = "0.1.0"
edition = "2021"
description = "Fast Rust implementation of Python's tabulate library"
license = "MIT"

[lib]
name = "tabulate_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
unicode-width = "0.1"
