[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tomli-rs"
version = "0.1.0"
description = "High-performance Rust implementation of tomli TOML parser"
authors = [{name = "Tal"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["toml", "parser", "config", "configuration", "performance"]

[project.urls]
Homepage = "https://github.com/youruser/tomli-rs"
Repository = "https://github.com/youruser/tomli-rs"

[tool.maturin]
module-name = "tomli_rs"
