[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "validators_rs"
version = "0.1.1"
description = "High-performance Rust implementation of validators - validate emails, URLs, IPs, and more"
requires-python = ">=3.8"
authors = [{name = "Rusputyn Contributors"}]
readme = "README.md"
keywords = ["validators", "validation", "email", "url", "performance", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
features = ["pyo3/extension-module"]
